--- a/Furniture-Moving-Project/src/main/resources/templates/accountmanage/forgot-verify.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/accountmanage/forgot-verify.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="register-link" style="margin-top:16px;">
-    <p><a th:href="@{/login}">← Quay lại đăng nhập</a></p>
+    <p><a th:href="@{/login}">Quay lại đăng nhập</a></p>
   </div>
 </div>
 </body>
