--- a/Furniture-Moving-Project/src/main/resources/templates/accountmanage/register.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/accountmanage/register.html
@@ -13,7 +13,7 @@
       <h1>Register</h1>
 
       <div class="input-box">
-        <input type="text" th:field="*{username}" placeholder="Username" required>
+        <input type="text" th:field="*{username}" placeholder="Tên đăng nhập" required>
       </div>
 
       <div class="input-box">
@@ -21,25 +21,25 @@
       </div>
 
       <div class="input-box">
-        <input type="password" th:field="*{password}" placeholder="Password" required>
+        <input type="password" th:field="*{password}" placeholder="Mật khẩu" required>
       </div>
 
       <div class="input-box">
-        <input type="text" th:field="*{firstName}" placeholder="First name" required>
+        <input type="text" th:field="*{firstName}" placeholder="Họ" required>
       </div>
 
       <div class="input-box">
-        <input type="text" th:field="*{lastName}" placeholder="Last name" required>
+        <input type="text" th:field="*{lastName}" placeholder="Tên" required>
       </div>
 
       <div class="input-box">
-        <input type="text" th:field="*{phone}" placeholder="Phone">
+        <input type="text" th:field="*{phone}" placeholder="Số Điện thoại">
       </div>
 
-      <button type="submit" class="btn">Register</button>
+      <button type="submit" class="btn">Đăng ký</button>
 
       <!-- Hiện lỗi nếu có -->
-      <div th:if="${error}" style="color:red; text-align:center; margin-top:10px;">
+      <div th:if="${error}" style="color:#fff; text-align:center; margin-top:10px;">
         <span th:text="${error}"></span>
       </div>
 
@@ -52,7 +52,7 @@
       <div style="text-align:center; margin-top:15px;">
         <a href="/homepage" class="btn" 
            style="display:inline-block; padding:10px 20px; border-radius:40px; background:#eee; color:#333; text-decoration:none; font-weight:600;">
-          ← Quay lại Trang chính
+          Quay lại Trang chính
         </a>
       </div>
     </form>
