--- a/Furniture-Moving-Project/src/main/resources/templates/operationadmin/accountmanage.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/operationadmin/accountmanage.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout.html}">
+      layout:decorate="~{layouts/main_layout.html}">
 <head>
-    <meta charset="UTF-8">
-    <title>ok</title>
+
 </head>
 <body>
 
