--- a/Furniture-Moving-Project/src/main/resources/templates/layouts/admin_layout.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/layouts/admin_layout.html
@@ -14,39 +14,25 @@
     <link rel="stylesheet" type="text/html" href="/static/assets/vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" type="text/html" href="/static/assets/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" type="text/html" href="/static/assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
-    <!-- endinject -->
+    <!-- end inject -->
     <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="/assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-    <link rel="stylesheet" type="text/css" href="/assets/js/select.dataTables.min.css">
+    <link rel="stylesheet" href="/static/assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+    <link rel="stylesheet" type="text/css" href="/static/assets/js/select.dataTables.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/static/assets/css/style.css">
     <!-- endinject -->
-    <link rel="shortcut icon" href="/assets/images/favicon.png" />
+    <link rel="shortcut icon" href="/static/assets/images/favicon.png" />
 </head>
-<body class="with-welcome-text">
+<body>
+
+
 <div class="container" layout:fragment="content">
-    <div class="row p-0 m-0 proBanner" id="proBanner">
-        <div class="col-md-12 p-0 m-0">
-            <div class="card-body card-body-padding px-3 d-flex align-items-center justify-content-between">
-                <div class="ps-lg-3">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <p class="mb-0 fw-medium me-3 buy-now-text">Free 24/7 customer support, updates, and more with this template!</p>
-                        <a href="https://www.bootstrapdash.com/product/star-admin-pro/" target="_blank" class="btn me-2 buy-now-btn border-0">Buy Now</a>
-                    </div>
-                </div>
-                <div class="d-flex align-items-center justify-content-between">
-                    <a href="https://www.bootstrapdash.com/product/star-admin-pro/"><i class="ti-home me-3 text-white"></i></a>
-                    <button id="bannerClose" class="btn border-0 p-0">
-                        <i class="ti-close text-white"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
+<header>
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex align-items-top flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
+            <!-- Logo -->
             <div class="me-3">
                 <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-bs-toggle="minimize">
                     <span class="icon-menu"></span>
@@ -61,11 +47,12 @@
                 </a>
             </div>
         </div>
+
         <div class="navbar-menu-wrapper d-flex align-items-top">
             <ul class="navbar-nav">
                 <li class="nav-item fw-semibold d-none d-lg-block ms-0">
-                    <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">John Doe</span></h1>
-                    <h3 class="welcome-sub-text">Your performance summary this week </h3>
+                    <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">Operation admin</span></h1>
+                    <h3 class="welcome-sub-text">System report summary</h3>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
@@ -218,6 +205,7 @@
             </button>
         </div>
     </nav>
+</header>
     <!-- partial -->
     <div class="container-fluid page-body-wrapper">
         <!-- partial:partials/_sidebar.html -->
@@ -733,23 +721,23 @@
 </div>
 <!-- container-scroller -->
 <!-- plugins:js -->
-<script src="/assets/vendors/js/vendor.bundle.base.js"></script>
-<script src="/assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+<script src="/static/assets/vendors/js/vendor.bundle.base.js"></script>
+<script src="/static/assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
 <!-- endinject -->
 <!-- Plugin js for this page -->
-<script src="/assets/vendors/chart.js/chart.umd.js"></script>
-<script src="/assets/vendors/progressbar.js/progressbar.min.js"></script>
+<script src="/static/assets/vendors/chart.js/chart.umd.js"></script>
+<script src="/static/assets/vendors/progressbar.js/progressbar.min.js"></script>
 <!-- End plugin js for this page -->
 <!-- inject:js -->
-<script src="/assets/js/off-canvas.js"></script>
-<script src="/assets/js/template.js"></script>
-<script src="/assets/js/settings.js"></script>
-<script src="/assets/js/hoverable-collapse.js"></script>
-<script src="/assets/js/todolist.js"></script>
+<script src="/static/assets/js/off-canvas.js"></script>
+<script src="/static/assets/js/template.js"></script>
+<script src="/static/assets/js/settings.js"></script>
+<script src="/static/assets/js/hoverable-collapse.js"></script>
+<script src="/static/assets/js/todolist.js"></script>
 <!-- endinject -->
 <!-- Custom js for this page-->
-<script src="/assets/js/jquery.cookie.js" type="text/javascript"></script>
-<script src="/assets/js/dashboard.js"></script>
+<script src="/static/assets/js/jquery.cookie.js" type="text/javascript"></script>
+<script src="/static/assets/js/dashboard.js"></script>
 <!-- <script src="assets/js/Chart.roundedBarCharts.js"></script> -->
 <!-- End custom js for this page-->
 </body>
