--- a/Furniture-Moving-Project/src/main/resources/templates/dashboard.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/dashboard.html
@@ -65,7 +65,7 @@
       </div>
       <div class="navbar-nav w-100">
         <a href="/" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-        <a href="/templates/user.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Quản lí tài khoản</a>
+        <a th:href="@{/chatbot/chatbot.html}" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Quản lí tài khoản</a>
         <a href="/" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Duyệt nhà cung cấp</a>
       </div>
     </nav>
