--- a/Furniture-Moving-Project/src/main/resources/templates/dashboard.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi" xmlns:th="http://www.thymeleaf.org">
+<<html lang="vi" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <title>Furniture Moving Admin</title>
@@ -63,11 +63,21 @@
           <span>Admin</span>
         </div>
       </div>
-      <div class="navbar-nav w-100">
-        <a href="/" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-        <a th:href="@{/chatbot/chatbot.html}" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Quản lí tài khoản</a>
-        <a href="/" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Duyệt nhà cung cấp</a>
-      </div>
+              <div class="navbar-nav w-100">
+  <a th:href="@{/}" class="nav-item nav-link active">
+    <i class="fa fa-tachometer-alt me-2"></i>Dashboard
+  </a>
+
+  <!-- ĐỔI thành Chatbot và trỏ đúng /chatbot -->
+  <a th:href="@{/chatbot}" class="nav-item nav-link">
+    <i class="fa fa-th me-2"></i>Chatbot
+  </a>
+
+  <a th:href="@{/provider}" class="nav-item nav-link">
+    <i class="fa fa-keyboard me-2"></i>Duyệt nhà cung cấp
+  </a>
+</div>
+
     </nav>
   </div>
   <!-- Sidebar End -->
@@ -326,14 +336,7 @@
                     <input class="form-check-input m-0" type="checkbox">
                 </label>
                 <div class="w-100 ms-3">
-                <div class="d-flex w-100 align-items-center justify-content-between">
-                  <span>Short task goes here...</span>
-                  <button class="btn btn-sm"><i class="fa fa-times"></i></button>
-                </div>
-              </div>
-            </div>
-            <!-- ... các task mẫu khác ... -->
-          </div>
+      </div>
         </div>
       </div>
     </div>
