--- a/Furniture-Moving-Project/src/main/resources/static/accountmanage/css/register.css
+++ b/Furniture-Moving-Project/src/main/resources/static/accountmanage/css/register.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url("/images/loginbg4.jpg") no-repeat;
+  background: url("/images/registerbg2.jpg") no-repeat;
   background-size: cover;
   background-position: center;
 }
