--- a/Furniture-Moving-Project/src/main/resources/templates/accountmanage/login.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/accountmanage/login.html
@@ -33,7 +33,7 @@
 
 <!-- Thông báo lỗi login -->
       <div th:if="${param.error}" style="color:#fff; text-align:center; padding-top: 20px;">
-        ❌Sai tài khoản hoặc mật khẩu.
+        Sai tài khoản hoặc mật khẩu!
       </div>
 
       <!-- Register link -->
