--- a/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
@@ -136,7 +136,7 @@
     <div class="row align-items-center">
       <div class="col-lg-5 col-md-6">
         <div class="about-img">
-          <img th:src="@{/homepage/img/about.jpg}" alt="Nền tảng kết nối nhà vận chuyển & khách hàng">
+          <img th:src="@{/homepage/img/about-remake-1.jpg}" alt="Nền tảng kết nối nhà vận chuyển & khách hàng">
         </div>
       </div>
       <div class="col-lg-7 col-md-6">
@@ -222,7 +222,7 @@
       <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
         <div class="service-item">
           <div class="service-img">
-            <img th:src="@{/homepage/img/service-1.jpg}" alt="Chuyển nhà trọn gói">
+            <img th:src="@{/homepage/img/service-remake-1.jpg}" alt="Chuyển nhà trọn gói">
             <div class="service-overlay">
               <p>Đăng yêu cầu chuyển nhà, nhận nhiều báo giá từ đối tác gần bạn, so sánh &amp; chọn.</p>
             </div>
@@ -238,7 +238,7 @@
       <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
         <div class="service-item">
           <div class="service-img">
-            <img th:src="@{/homepage/img/service-2.jpg}" alt="Chuyển văn phòng">
+            <img th:src="@{/homepage/img/service-remake-2.jpg}" alt="Chuyển văn phòng">
             <div class="service-overlay">
               <p>Di dời văn phòng, hồ sơ, thiết bị. Đặt ngoài giờ, xem đánh giá &amp; năng lực đối tác.</p>
             </div>
@@ -254,7 +254,7 @@
       <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
         <div class="service-item">
           <div class="service-img">
-            <img th:src="@{/homepage/img/service-3.jpg}" alt="Bốc xếp & kho bãi">
+            <img th:src="@{/homepage/img/service-remake-3.jpg}" alt="Bốc xếp & kho bãi">
             <div class="service-overlay">
               <p>Thuê nhân công theo ca, sắp xếp kho bãi, xử lý hàng cồng kềnh an toàn.</p>
             </div>
@@ -270,7 +270,7 @@
       <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="service-img">
-            <img th:src="@{/homepage/img/service-4.jpg}" alt="Tháo lắp & đóng gói">
+            <img th:src="@{/homepage/img/service-remake-4.jpg}" alt="Tháo lắp & đóng gói">
             <div class="service-overlay">
               <p>Tháo lắp nội thất, điện máy; đóng gói chống sốc theo chuẩn của từng đối tác.</p>
             </div>
@@ -286,7 +286,7 @@
       <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
         <div class="service-item">
           <div class="service-img">
-            <img th:src="@{/homepage/img/service-5.jpg}" alt="Vận chuyển liên tỉnh">
+            <img th:src="@{/homepage/img/service-remake-5.jpg}" alt="Vận chuyển liên tỉnh">
             <div class="service-overlay">
               <p>Xe tải đa tải trọng, tuyến liên tỉnh. Theo dõi hành trình &amp; chính sách bảo hiểm rõ ràng.</p>
             </div>
@@ -302,7 +302,7 @@
       <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
         <div class="service-item">
           <div class="service-img">
-            <img th:src="@{/homepage/img/service-6.jpg}" alt="Cho thuê xe tải">
+            <img th:src="@{/homepage/img/service-remake-6.jpg}" alt="Cho thuê xe tải">
             <div class="service-overlay">
               <p>Thuê xe tải/người khuân vác theo giờ/chuyến. Hợp đồng linh hoạt trên nền tảng.</p>
             </div>
