Update operation admin CRUD

--- a/Furniture-Moving-Project/src/main/resources/templates/dashboard.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/dashboard.html
@@ -69,8 +69,8 @@
   </a>
 
   <!-- ĐỔI thành Chatbot và trỏ đúng /chatbot -->
-  <a th:href="@{/chatbot}" class="nav-item nav-link">
-    <i class="fa fa-th me-2"></i>Chatbot
+  <a th:href="@{/accountmanagement}" class="nav-item nav-link">
+    <i class="fa fa-th me-2"></i>Quản lí tài khoản
   </a>
 
   <a th:href="@{/provider}" class="nav-item nav-link">
