--- a/Furniture-Moving-Project/src/main/resources/templates/accountmanage/login.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/accountmanage/login.html
@@ -17,14 +17,14 @@
       <h1>ĐĂNG NHẬP</h1>
 
       <div class="input-box">
-        <input type="text" name="username" placeholder="Tên đăng nhập" required>
-      </div>
+  <input type="text" name="username" placeholder="Tên đăng nhập hoặc Email" required>
+</div>
 
-      <!-- Ô mật khẩu có con mắt bên phải -->
-      <div class="input-box">
-        <input id="passwordInput" type="password" name="password" placeholder="Mật khẩu" required>
-        <i id="togglePassword" class="bx bx-hide" aria-label="Hiện/ẩn mật khẩu" role="button" tabindex="0"></i>
-      </div>
+<div class="input-box">
+  <input id="passwordInput" type="password" name="password" placeholder="Mật khẩu" required>
+  <i id="togglePassword" class="bx bx-hide" aria-label="Hiện/ẩn mật khẩu" role="button" tabindex="0"></i>
+</div>
+
 
       <div class="remember-forgot">
         <label><input type="checkbox">Nhớ tài khoản của tôi</label>
